# griffe

./: .copier-answers.yml  .gitignore  .gitpod.dockerfile  .gitpod.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  benchmark.sh  devdeps.txt  duties.py  enumvalues.py  griffe.json  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  schema.json  sitemap.xml  tl.py  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
.overrides/partials/: comments.html
alternatives/: index.html  index.md
assets/: _mkdocstrings.css
best_practices/: index.html
changelog/: index.html  index.md
checking/: index.html
cli_reference/: index.html
code-of-conduct/: index.html  index.md
code_of_conduct/: index.html
community/: index.html  index.md
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini  ruff.toml  ty.toml
config/vscode/: launch.json  settings.json
contributing/: index.html
coverage/: covindex.html  d_0468c13ba1fa8830___init___py.html  d_0468c13ba1fa8830_dataclasses_py.html  d_0468c13ba1fa8830_google_py.html  d_0468c13ba1fa8830_numpy_py.html  d_0468c13ba1fa8830_parsers_py.html  d_0468c13ba1fa8830_sphinx_py.html  d_0468c13ba1fa8830_utils_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_dataclasses_py.html  d_a44f0ac069e85531_test_diff_py.html  d_a44f0ac069e85531_test_encoders_py.html  d_a44f0ac069e85531_test_expressions_py.html  d_a44f0ac069e85531_test_extensions_py.html  d_a44f0ac069e85531_test_finder_py.html  d_a44f0ac069e85531_test_functions_py.html  d_a44f0ac069e85531_test_git_py.html  d_a44f0ac069e85531_test_inheritance_py.html  d_a44f0ac069e85531_test_inspector_py.html  d_a44f0ac069e85531_test_loader_py.html  d_a44f0ac069e85531_test_merger_py.html  d_a44f0ac069e85531_test_mixins_py.html  d_a44f0ac069e85531_test_nodes_py.html  d_a44f0ac069e85531_test_stdlib_py.html  d_a44f0ac069e85531_test_visitor_py.html  d_ac2f1acd38b0d2bf___init___py.html  d_ac2f1acd38b0d2bf__all_py.html  d_ac2f1acd38b0d2bf__ast_py.html  d_ac2f1acd38b0d2bf__docstrings_py.html  d_ac2f1acd38b0d2bf__imports_py.html  d_ac2f1acd38b0d2bf__names_py.html  d_ac2f1acd38b0d2bf__parameters_py.html  d_ac2f1acd38b0d2bf__runtime_py.html  d_ac2f1acd38b0d2bf__values_py.html  d_d196e69e744528ee___init___py.html  d_d196e69e744528ee_inspector_py.html  d_d196e69e744528ee_visitor_py.html  d_eb24e90c7b74ae12___init___py.html  d_eb24e90c7b74ae12_conftest_py.html  (+30 more)
credits/: index.html  index.md
css/: custom.css
docs/: alternatives.md  changelog.md  checking.md  cli_reference.md  community.md  contributing.md  credits.md  docstrings.md  downstream-projects.md  dumping.md  extensions.md  gen_griffe_json.py  gen_ref_nav.py  getting-help.md  getting-started.md  guide.md  index.md  installation.md  introduction.md  license.md  loading.md  parsing_docstrings.md  playground.md  redirects.py  reference.md  schema-docstrings-options.json  schema.json  try_it_out.md  usage.md
docs/.overrides/: main.html
docs/community/: index.md
docs/css/: custom.css  material.css  mkdocstrings.css  mkdocstrings.css.rej
docs/extensions/: built-in.md  index.md  official.md  third-party.md
docs/getting-started/: index.md
docs/guide/: contributors.md  index.md  users.md
docs/guide/contributors/: index.md  (+4 more)
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
docs/reference/: api.md  cli.md  docstrings.md  index.md
docstrings/: index.html
downstream-projects/: index.html  index.md
dumping/: index.html
expressions/: index.html
extensions/: index.html
extensions/built-in/: index.html  index.md
extensions/official/: index.html  index.md
getting-help/: index.html  index.md
getting-started/: index.html  index.md
guide/: index.html
guide/contributors/: index.html  index.md
guide/users/: index.html  index.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
installation/: index.html  index.md
introduction/: index.html  index.md
license/: index.html  index.md
loading/: index.html
parsing_docstrings/: index.html
playground/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/cli/: index.html  index.md
reference/docstrings/: index.html  index.md
reference/griffe/: index.html
scripts/: fixsetup.sh  gen_credits.py  gen_griffe_json.py  gen_internal_api.py  gen_ref_nav.py  gen_structure_docs.py  get_version.py  griffe_exts.py  insiders.py  make  make.py  multirun.sh  setup.sh
search/: search_index.json
src/_griffe/: __init__.py  c3linear.py  cli.py  collections.py  dataclasses.py  debug.py  diff.py  encoders.py  enumerations.py  exceptions.py  expressions.py  finder.py  git.py  importer.py  loader.py  logger.py  merger.py  mixins.py  models.py  stats.py  tests.py
src/griffe/: __init__.py  __main__.py  c3linear.py  cli.py  collections.py  dataclasses.py  debug.py  diff.py  encoders.py  enumerations.py  exceptions.py  expressions.py  extended_ast.py  finder.py  git.py  importer.py  loader.py  logger.py  merger.py  mixins.py  node_utils.py  stats.py  tests.py  visitor.py
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_cli.py  test_dataclasses.py  test_diff.py  test_encoders.py  test_expressions.py  test_extensions.py  test_finder.py  test_functions.py  test_git.py  test_google.py  test_inheritance.py  test_inspector.py  test_internals.py  test_loader.py  test_merger.py  test_mixins.py  test_models.py  test_nodes.py  test_public_api.py  test_random_code.py  test_rst.py  test_signature.py  test_stdlib.py  test_visitor.py
tests/test_docstrings/: __init__.py  conftest.py  helpers.py  test_google.py  test_numpy.py  test_rst.py  test_sphinx.py  test_warnings.py
tests/test_extensions/: __init__.py  test_base.py  test_dataclasses.py  test_unpack_typeddict.py
tests/test_git/: test_from_git.py
try_it_out/: index.html
usage/: index.html
(+501 files in other folders)
