[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe"
description = "Signatures for entire Python programs. Extract the structure, the frame, the skeleton of your project, to generate API documentation or find breaking changes in your API."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
# YORE: EOL 3.8: Remove `3.8` with `3.9` within line.
requires-python = ">=3.8"
keywords = ["api", "signature", "breaking-changes", "static-analysis", "dynamic-analysis"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    # YORE: EOL 3.8: Remove line.
    "Programming Language :: Python :: 3.8",
    # YORE: EOL 3.9: Remove line.
    "Programming Language :: Python :: 3.9",
    # YORE: EOL 3.10: Remove line.
    "Programming Language :: Python :: 3.10",
    # YORE: EOL 3.11: Remove line.
    "Programming Language :: Python :: 3.11",
    # YORE: EOL 3.12: Remove line.
    "Programming Language :: Python :: 3.12",
    # YORE: EOL 3.13: Remove line.
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # YORE: EOL 3.8: Remove line.
    "astunparse>=1.6; python_version < '3.9'",
    "colorama>=0.4",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe"
Documentation = "https://mkdocstrings.github.io/griffe"
Changelog = "https://mkdocstrings.github.io/griffe/changelog"
Repository = "https://github.com/mkdocstrings/griffe"
Issues = "https://github.com/mkdocstrings/griffe/issues"
Discussions = "https://github.com/mkdocstrings/griffe/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
griffe = "griffe:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
